k8s-template/nginx-test/nginx-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
spec:
  rules:
  - host: frontend.k8s.irootechapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
  - host: my-nginx.k8s.irootechapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
